--- a/public/index.css
+++ b/public/index.css
@@ -36,18 +36,28 @@
   
   .subtitulo{font-size: 1.0rem; text-align: right; padding-right: 50px; padding-top: 0; margin-top: 0; margin-bottom: 30px;}
   
-  .divIcone{gap: 80px; margin: auto 0; display: flex; align-items: center; justify-content: center; text-align: center;}
-  .icone{font-size: 40px; size: 50px;}
-  .iconeItem{display: flex; flex-direction: column;}
+  .divIcone{gap: 80px; width: 80%; margin: 0 auto; display: flex; align-items: center; justify-content: center; text-align: center;
+            background-color: rgb(171, 33, 33); border-radius: 30px; padding: 40px; margin:20px}
+  .icone{font-size: 80px; size: 50px; color: white;}
+  .iconeItem{display: flex; flex-direction: column; color: white; font-size: 20px; font-weight: bold;}
   
   .semEspaco{margin-bottom: 0; padding-bottom: 0; }
   .texto{font-size: 1.4rem;}
   
   .produtoDiv{text-align: center; padding: 0; margin: 0; overflow: hidden; display: flex; flex-direction: column;}
   .carrosselDiv{ width: 100%; display: flex; flex-direction: row;}
-  .textoCarrossel{width: 50%; text-align: center; justify-items: center;}
-  .carrossel{display: flex; transition: 0.5 ease; width: 50%;}
+  .textoCarrossel{width: 60%; text-align: center; justify-items: center;}
+  
+  .carrosselPai {position: relative; width: 40%; max-width: 600px;
+    margin: auto; overflow: hidden;}
+    .carrossel {
+      display: flex;
+      transition: transform 0.5s ease;
+  }
   .carrossel img{width: 100%; flex-shrink: 0;}
+
+.btnLoja{background-color: #1e0e3e; padding: 20px; color: white; border-radius: 10px; margin:30px}
+
 
   .btnCarrossel{ top: 50%; transform: translateY(-50%); background-color: rgba(0, 0, 0, 0.5);
     color: white; border: none; padding: 10px; cursor: pointer; font-size: 24px;}
