--- a/public/index.css
+++ b/public/index.css
@@ -26,7 +26,7 @@
 
   .mapApi{width: 800px; height: 450px; border:0; margin: auto 0;}
 
-  .tituloChamativo{padding: 0; font-size: 70px; font-weight: bolder; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-style: oblique;}
+  .tituloChamativo{padding: 0; margin:0; font-size: 70px; font-weight: bolder; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-style: oblique;}
   .divCentral{gap: 80px;margin: auto 0; display: flex; align-items: center; justify-content: center; text-align: center;}
   .txtCentral{text-align: center;}
   .txtChama{font-size: 30px; font-weight: bolder; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: oblique;}
@@ -37,17 +37,17 @@
   .subtitulo{font-size: 1.0rem; text-align: right; padding-right: 50px; padding-top: 0; margin-top: 0; margin-bottom: 30px;}
   
   .divIcone{gap: 80px; width: 80%; margin: 0 auto; display: flex; align-items: center; justify-content: center; text-align: center;
-            background-color: rgb(171, 33, 33); border-radius: 30px; padding: 40px; margin:20px}
+            background-color: rgb(171, 33, 33); border-radius: 30px; padding: 50px; margin-top:40px; margin-bottom: 40px;}
   .icone{font-size: 80px; size: 50px; color: white;}
   .iconeItem{display: flex; flex-direction: column; color: white; font-size: 20px; font-weight: bold;}
   
   .semEspaco{margin-bottom: 0; padding-bottom: 0; }
   .texto{font-size: 1.4rem;}
   
-  .produtoDiv{text-align: center; padding: 0; margin: 0; overflow: hidden; display: flex; flex-direction: column;}
+  .LojaDiv{text-align: center; padding: 0; margin: 0; overflow: hidden; display: flex; flex-direction: column;}
   .carrosselDiv{ width: 100%; display: flex; flex-direction: row;}
-  .textoCarrossel{width: 60%; text-align: center; justify-items: center;}
-  
+  .textoCarrossel{ margin: auto 0;width: 60%; text-align: center; justify-items: center;
+    background-color: rgb(98, 161, 216); border-radius: 30px;}
   .carrosselPai {position: relative; width: 40%; max-width: 600px;
     margin: auto; overflow: hidden;}
     .carrossel {
@@ -56,10 +56,15 @@
   }
   .carrossel img{width: 100%; flex-shrink: 0;}
 
-.btnLoja{background-color: #1e0e3e; padding: 20px; color: white; border-radius: 10px; margin:30px}
-
+  .btnLoja{background-color: #1e0e3e; padding: 20px; color: white; border-radius: 10px;
+          font-size: 1.4rem;}
 
   .btnCarrossel{ top: 50%; transform: translateY(-50%); background-color: rgba(0, 0, 0, 0.5);
     color: white; border: none; padding: 10px; cursor: pointer; font-size: 24px;}
   .next{right: 10px;}
   .prev{left: 10px;}
+
+
+  .produtoDiv{display: flex; background-color: antiquewhite; flex-direction: row;}
+  .produtoItem{text-align: center;}
+  .produtoItem img{width: 80%; margin: auto 0; padding: 20px;}
